--- a/p6 Registration Form/views/index.html
+++ b/p6 Registration Form/views/index.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-    <style>
-        p{
-            font-size: 1.4rem;
-            padding: 15px;
-            font-family: cursive;
-        }
-        a{
-            display: inline-block;
-            padding: 7px 20px;
-            text-decoration: none;
-            font-family: cursive;
-            font-weight: 600;
-            font-size: 1.2rem;
-            border: 2px solid salmon;
-            border-radius: 100px;
-            color: salmon;
-        }
-        a:hover{
-            background-color: pink;
-            color: blueviolet;
-        }
-    </style>
+    <link rel="stylesheet" href="../../css/home.css">
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam quod est velit ipsam non, fugit sunt debitis vitae placeat facilis eos dolorum molestiae iste necessitatibus hic quidem! Assumenda, eveniet suscipit?</p>
