--- a/p6 Registration Form/views/register.html
+++ b/p6 Registration Form/views/register.html
@@ -4,58 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <style>
-        *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-h1{
-    text-align: center;
-    border-bottom: 3px solid salmon;
-    font-family: cursive;
-    padding: 20px 0;
-    width: 50%;
-    margin: 0 auto;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid salmon;
-    border-radius: 10px;
-    padding: 50px;
-}
-input,button{
-    padding: 7px 15px;
-    outline: none;
-    border: 2px solid pink;
-    font-size: 1.2rem;
-    color: green;
-    font-family: cursive;
-    border-radius: 10px;
-}
-button{
-   width: 30%;
-   position: absolute;
-   bottom: 0;
-   right: 48px;
-   cursor: pointer;
-   margin-bottom: 10px;
-}
-label{
-    font-size: 1.3rem;
-    font-weight: 500;
-    font-family: cursive;
-    padding: 5px 5px;
-}
-    </style>
-   
+    <link rel="stylesheet" href="../../css/register.css">
 </head>
 <body>
     <h1>Register Form</h1>
